--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First HTML File</title>
+    <title>test HTML File</title>
+
+    <style>
+     
+    </style>
+
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
+    <!>
     <!-- to make a comment  ctrl + / -->
 
     <!-- Paragraph Tag <p> -->
-    <p>Paragraph
+    <p title="me">Paragraph
         
         tag</p>
 
@@ -24,6 +31,89 @@
                       voluptates numquam? Nihil 
             ut labore a laudantium ullam neque iste laboriosam eveniet.
     </pre>
+    <h1>testing h1</h1>
+    <h6>testing h6</h6>
+
+    <!-- Formating tags -->
+    <b>testing b</b>    <br>
+    <i>testing i</i> <br>
+    <del>testing del</del> <br>
+    <sup>testing sup</sup> <br>
+    <sub>testing sub</sub> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <em>Hi there</em>
+   <h1>Data1</h1>
+   <h1>Data2</h1>
+   <h1>Data3</h1>
+   <h1>Data4</h1>
+   <h1>Data5</h1>
+   <h1>Data6</h1>
+
+    <!-- hr and br are called empty tags -->
+    <hr />
+
+<!-- Attributes:
+        They provide additional information for that tag
+        They are always used in the opening tag
+
+        syntax:
+        <p attrName = "value"> </p>
+-->
+
+  <a href="https://www.example.com">
+    <img src="images/ss.jpg" alt="test img">  </a>
+
+    <br>
+    <br>
+    <br>
+    <!-- https://www.google.com/ -->
+
+    <a href=" https://www.google.com/" target="_blank">Go to Google</a>
+
+
+    <br>
+    <br>
+
+    <!-- image with a relative link -->
+    <img src="./images/nature.jpg" width="400px" alt="">
+
+    <!-- image with an absolute link -->
+<br>
+<br>
+
+    <img src="https://images.unsplash.com/photo-1608848461950-0fe51dfc41cb?fm=jpg&w=3000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D" width="200px" height="300px" alt="" title="cat here">
+
+
+    <!-- 3 ways to apply CSS in your code
+            1) Inline styling
+            2) Style tag styling
+            3) Stylesheet styling (the preferred way) 
+    -->
+
+
+    <p style="color: red;" class="colors">I am red one</p>
+    <p style="font-size: 24px;">I am big one</p>
+
+    <p style="color: red; font-size: 24px;">I am big and red</p>
+
+
+    <!-- CSS Selectors
+            Class: A common selector, can be resued again
+            id: A unique selector, can not be used again 
+    -->
+
+
+    <p class="redOne">Red one</p>
+    <p class="bigOne">Big one</p>
+
+
+    <p class="redOne bigOne">Some text here</p>
+
+    <p id="uniqueOne">Unique Text</p>
+
 </body>
 
 </html>
