--- a/HTML/tables.html
+++ b/HTML/tables.html
@@ -16,7 +16,7 @@
     -->
     
 
-<table class="myTable">
+<!-- <table class="myTable">
     <tr>
         <th>Id</th>
         <th>Name</th>
@@ -33,12 +33,10 @@
         <td>25</td>
     </tr>
 
-</table>
+</table> -->
 
 <!-- make a table of 4 columns and 5 rows -->
-<br>
-<br>
-<br>
+
 
 <!-- <table class="myTable">
     <tr>
@@ -79,7 +77,7 @@
     </tr>
 </table> -->
 
-<table class="myTable2">
+<!-- <table class="myTable2">
     <tr style="height:30%">
         <td style="width: 60%;">data</td>
         <td style="width: 20%">data</td>
@@ -90,86 +88,52 @@
         <td>data</td>
         <td>data</td>
     </tr>
-</table>
+</table> -->
 
-<br>
-<br>
-<br>
-<br>
+
 
 <!-- 
     attributes used in tables for mergin
         colspan: used to merge the coumns
         rowspan: used to merge the rows
 -->
+<table class="myTable3">
 
-<table class="myTable2">
-    <tr>
-        <td colspan="2">data1</td>
-        <!-- <td>data2</td> -->
-        <td>data3</td>
-        <td>data4</td>
-    </tr>
-    <tr>
-        <td rowspan="2">data1</td>
-        <td>data2</td>
-        <td>data3</td>
-        <td>data4</td>
-    </tr>
-    <tr>
-        <!-- <td>data1</td> -->
-        <td>data2</td>
-        <td>data3</td>
-        <td>data4</td>
-    </tr>
-    <tr>
-        <td>data1</td>
-        <td colspan="3">data2</td>
-        <!-- <td>data3</td>
-        <td>data4</td> -->
-    </tr>
-    <tr>
-        <td>data1</td>
-        <td>data2</td>
-        <td>data3</td>
-        <td>data4</td>
-    </tr>
-</table>
+<tr>
+    <td rowspan="2">A</td>
+    <td>B</td>
+    <td rowspan="3">D</td>
+    <td colspan="2">E</td>
+    <!-- <td>test</td> -->
+    <td>F</td>
+</tr>
 
-<br>
-<br>
-<br>
+<tr>
+    <!-- <td>test</td> -->
+    <td>C</td>
+    <!-- <td>test</td> -->
+    <td rowspan="2">G</td>
+    <td rowspan="2">H</td>
+    <td rowspan="2">I</td>
+</tr>
 
-<table class="myTable2">
-    <tr>
-        <td colspan="3">2022</td>
-        <!-- <td></td>
-        <td></td> -->
-    </tr>
+<tr>
+    <td colspan="2">J</td>
+    <!-- <td>test</td> -->
+    <!-- <td>test</td> -->
+    <!-- <td>test</td>
+    <td>test</td>
+    <td>test</td> -->
+</tr>
 
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-
-    <tr>
-        <td colspan="2" rowspan="2">FIESTA</td>
-        <!-- <td></td> -->
-        <td></td>
-    </tr>
-
-    <tr>
-        <!-- <td></td> -->
-        <!-- <td></td> -->
-        <td></td>
-    </tr>
-
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
+<tr>
+    <td colspan="3">K</td>
+    <!-- <td>test</td>
+    <td>test</td> -->
+    <td>L</td>
+    <td colspan="2">M</td>
+    <!-- <td>test</td> -->
+</tr>
 </table>
 
 
