--- a/HTML/tableWebLayout.html
+++ b/HTML/tableWebLayout.html
@@ -4,17 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="stylesheet" href="./styles/tableWebLayout.css">
 </head>
 <body>
     <table class="myTable">
-        <tr style="height: 10%;">
-            <td colspan="3"></td>
+        <tr style="height: 15%;">
+            <td colspan="3" class="nav">
+                <div class="navContainer">
+                    <div class="logoContainer">
+                        <h2>LOGO</h2>
+                    </div>
+                    <ul class="linksContainer">
+                        <li>Services</li>
+                        <li>Projects</li>
+                        <li>About</li>
+                        <li class="contactBtn">Contact</li>
+                    </ul>
+                </div>
+            </td>
             <!-- <td></td>
             <td></td> -->
         </tr>
-        <tr style="height: 80%;">
-            <td style="width: 10%;"></td>
+        <tr style="height: 75%;">
+            <td style="width: 10%;">
+                <div class="asideContainer">
+                    <div class="nameContainer">
+                        <img src="./images/nature.jpg" width="100px" height="100px">
+                        <h2>Michael Lee</h2>
+                    </div>
+                    <ul class="asideLinkContainer">
+                        <li><i class="bi bi-house-door-fill"></i> Home</li>
+                        <li>Download</li>
+                        <li>Gift Code</li>
+                        <li>Top Review</li>
+                        <li>Settings</li>
+                        <li>Support</li>
+                        <li>Sign out</li>
+                    </ul>
+                </div>
+                
+            </td>
             <td style="width: 80%;"></td>
             <td style="width: 10%;"></td>
         </tr>
