--- a/HTML/tableWebLayout.html
+++ b/HTML/tableWebLayout.html
@@ -37,12 +37,12 @@
                     </div>
                     <ul class="asideLinkContainer">
                         <li><i class="bi bi-house-door-fill"></i> Home</li>
-                        <li>Download</li>
-                        <li>Gift Code</li>
-                        <li>Top Review</li>
-                        <li>Settings</li>
-                        <li>Support</li>
-                        <li>Sign out</li>
+                        <li><i class="bi bi-box-arrow-down"></i> Download</li>
+                        <li><i class="bi bi-gift"></i> Gift Code</li>
+                        <li><i class="bi bi-trophy"></i> Top Review</li>
+                        <li><i class="bi bi-gear"></i> Settings</li>
+                        <li><i class="bi bi-info-circle"></i> Support</li>
+                        <li><i class="bi bi-box-arrow-right"></i> Sign out</li>
                     </ul>
                 </div>
                 
