--- a/HTML/tableWebLayout.html
+++ b/HTML/tableWebLayout.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
+        integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <link rel="stylesheet" href="./styles/tableWebLayout.css">
 </head>
+
 <body>
     <table class="myTable">
         <tr style="height: 15%;">
@@ -29,7 +34,7 @@
             <td></td> -->
         </tr>
         <tr style="height: 75%;">
-            <td style="width: 10%;">
+            <td style="width: 15%;">
                 <div class="asideContainer">
                     <div class="nameContainer">
                         <img src="./images/nature.jpg" width="100px" height="100px">
@@ -45,16 +50,104 @@
                         <li><i class="bi bi-box-arrow-right"></i> Sign out</li>
                     </ul>
                 </div>
-                
+
             </td>
-            <td style="width: 80%;"></td>
+            <td style="width: 75%;">
+                <table class="bodyTable">
+                    <tr>
+                        <td>
+                            <div class="content">
+
+                                <img src="./images/nature.jpg" width="100%" height="40%">
+                                <h4>date</h4>
+                                <br>
+                                <h2>Title</h2>
+                                <br>
+                                <p>text</p>
+                                <br>
+                                <!-- <p style="text-align: center;">------------------------------------------------------</p> -->
+                                 <hr >
+                                <p style="text-align: center;"><i class="bi bi-eye"></i> 0</p>
+
+                            </div>
+
+                        </td>
+                        <td>
+                            <div class="content">
+
+                                <img src="./images/nature.jpg" width="100%" height="40%">
+                                <h4>date</h4>
+                                <br>
+                                <h2>Title</h2>
+                                <br>
+                                <p>text</p>
+                                <br>
+                                <p style="text-align: center;">------------------------------------------------------</p>
+                                <p style="text-align: center;"><i class="bi bi-eye"></i> 0</p>
+
+                            </div>
+
+                        </td>
+                        <td>
+                            <div class="content">
+
+                                <img src="./images/nature.jpg" width="100%" height="40%">
+                                <h4>date</h4>
+                                <br>
+                                <h2>Title</h2>
+                                <br>
+                                <p>text</p>
+                                <br>
+                                <p style="text-align: center;">------------------------------------------------------</p>
+                                <p style="text-align: center;"><i class="bi bi-eye"></i> 0</p>
+
+                            </div>
+
+                        </td>
+                        <td>
+                            <div class="content">
+
+                                <img src="./images/nature.jpg" width="100%" height="40%">
+                                <h4>date</h4>
+                                <br>
+                                <h2>Title</h2>
+                                <br>
+                                <p>text</p>
+                                <br>
+                                <p style="text-align: center;">------------------------------------------------------</p>
+                                <p style="text-align: center;"><i class="bi bi-eye"></i> 0</p>
+
+                            </div>
+                        </td>
+                        
+                    </tr>
+                </table>
+
+            </td>
             <td style="width: 10%;"></td>
         </tr>
         <tr style="height: 10%;">
-            <td colspan="3"></td>
-            <!-- <td></td>
-            <td></td> -->
+            <td colspan="3">
+
+                <table class="footTable">
+                    <tr>
+                        <td style="width: 30%;">
+                            <p><i class="bi bi-geo-alt"></i> test location </p>
+                            <p><i class="bi bi-telephone"></i> test ph </p>
+                            <p><i class="bi bi-envelope"></i> test email</p>
+                        </td>
+                        <td style="width: 70%;">
+                            <h3>About me</h3>
+                            <p>some words</p>
+                            <p><i class="bi bi-discord"></i> <i class="bi bi-github"></i> <i class="bi bi-facebook"></i> <i class="bi bi-instagram"></i> </p>
+                        </td>
+                    </tr>
+
+                </table>
+
+            </td>
         </tr>
     </table>
 </body>
+
 </html>
