--- a/HTML/tableWebLayout.html
+++ b/HTML/tableWebLayout.html
@@ -40,7 +40,7 @@
                         <img src="./images/nature.jpg" width="100px" height="100px">
                         <h2>Michael Lee</h2>
                     </div>
-                    <ul class="asideLinkContainer">
+                    <ul>
                         <li><i class="bi bi-house-door-fill"></i> Home</li>
                         <li><i class="bi bi-box-arrow-down"></i> Download</li>
                         <li><i class="bi bi-gift"></i> Gift Code</li>
@@ -124,7 +124,42 @@
                 </table>
 
             </td>
-            <td style="width: 10%;"></td>
+            <td style="width: 10%;">
+                <table class="rightAsideContainer">
+                    <td>
+                        <h1>Recent posts</h1>
+                        <ul class="rightAsideUl">
+                            <li><a href="#">post 1</a></li>
+                            <li><a href="#">post 2</a></li>
+                            <li><a href="#">post 3</a></li>
+                            <li><a href="#">post 4</a></li>
+                            <li><a href="#">post 5</a></li>
+                            <li><a href="#">post 6</a></li>
+                        </ul>
+                        <br><br>
+                        <h1>Archives</h1>
+                        <ul class="rightAsideUl">
+                            <li><a href="#">post 1</a></li>
+                            <li><a href="#">post 2</a></li>
+                            <li><a href="#">post 3</a></li>
+                            <li><a href="#">post 4</a></li>
+                            <li><a href="#">post 5</a></li>
+                            <li><a href="#">post 6</a></li>
+                        </ul>
+                        <br><br>
+                        <h1>Categories</h1>
+                        <ul class="rightAsideUl">
+                            <li><a href="#">post 1</a></li>
+                            <li><a href="#">post 2</a></li>
+                            <li><a href="#">post 3</a></li>
+                            <li><a href="#">post 4</a></li>
+                            <li><a href="#">post 5</a></li>
+                            <li><a href="#">post 6</a></li>
+                        </ul>
+                    </td>
+                </table>
+
+            </td>
         </tr>
         <tr style="height: 10%;">
             <td colspan="3">
